added docs for deleteChallenge
